--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soap-weather",
+  "name": "soap-calculator",
   "version": "1.0.0",
   "main": "server/server.js",
   "engines": {
@@ -31,5 +31,5 @@
     "url": ""
   },
   "license": "UNLICENSED",
-  "description": "soap-weather"
+  "description": "soap-calculator"
 }
